another z-index issue fixed

--- a/modules_css/jquery.listdropdown.less
+++ b/modules_css/jquery.listdropdown.less
@@ -8,7 +8,7 @@
 .listdropdown-wrapper {
   position: relative;
   display: inline-block;
-  z-index: 500;
+  z-index: 430;
   margin: 0.5em 0;
   width: 100%;
   width: auto;
@@ -66,7 +66,7 @@
   background: @background_color;
   padding:0;
   color: @listdropdown_text_color;
-  z-index: 500;
+  z-index: 400;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   top: 3.5em;
   right: 0;
